create parcel builder configuration

--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "name": "banana-ts",
   "version": "0.0.1",
   "description": "A simple frontend library",
-  "main": "index.js",
+  "source": "src/index.ts",
+  "main": "dist/index.js",
+  "module": "dist/module.js",
+  "types": "dist/types.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel build",
+    "watch": "parcel watch",
+    "demo": "parcel demo/index.html"
   },
   "author": "Mikhail Bogomazov",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/packager-ts": "^2.5.0",
+    "@parcel/transformer-typescript-tsc": "^2.5.0",
+    "@parcel/transformer-typescript-types": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.14.0",
