--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,6 @@
         "prettier"
     ],
     "rules": {
-        "prettier/prettier": ["error"]
+        "prettier/prettier": ["error", {"semi": true}]
     }
 }
