--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,6 +3,7 @@
     "singleQuote": true,
     "trailingComma": "es5",
     "arrowParens": "avoid",
-    "semi": false,
+    "semi": true,
+    "semicolon": true,
     "tabWidth": 4
   }
