change package.json for minifying and building correctly

--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "banana-ts",
+  "name": "frame-ts",
   "version": "0.0.1",
   "description": "A simple frontend library",
   "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/module.js",
-  "types": "dist/types.d.ts",
+  "targets": {
+    "main": {
+      "optimize": true
+    }
+  },
   "scripts": {
     "build": "parcel build",
     "watch": "parcel watch",
-    "demo": "parcel demo/index.html",
+    "demo": "parcel demo/index.html --dist-dir demo/dist",
     "parse": "npx ts-node src/template-engine/index.ts"
   },
   "author": "Mikhail Bogomazov",
