--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frame-ts",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A simple frontend library",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -14,6 +14,10 @@
     "watch": "parcel watch",
     "demo": "parcel demo/index.html --dist-dir demo/dist",
     "parse": "npx ts-node src/template-engine/index.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mbogomazov/frame-ts"
   },
   "author": "Mikhail Bogomazov",
   "license": "ISC",
