--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple frontend library",
   "source": "src/index.ts",
   "main": "dist/index.js",
+  "types": "dist/types.d.ts",
   "targets": {
     "main": {
       "optimize": true
